# bakex

./: .dockerignore  .env.example  .gitignore  .invigil.yml  ADOPTERS.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  llms.txt  pyproject.toml  tailwind.config.js  update_templates.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: blueprint_request.yml  bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  dco.yml  quality-gate.yml  refresh-amis.yml  release.yml  scorecard.yml  smoke-published.yml  weekly-image-refresh.yml
ansible/: README.md  site.yml
bakex/: __init__.py  cli.py  config.py  main.py  paths.py
bakex/api/: agent.py  api_keys.py  auditor.py  blueprints.py  builder.py  integrations.py  pipeline.py  plugins.py  registry.py  system.py  ui.py  webhooks.py
bakex/core/: agent.py  auditor.py  auth.py  blueprint.py  builder.py  notifications.py  os_catalog.py  parser.py  playbook_gen.py  registry.py  report.py  sysdeps.py
bakex/core/llm/: __init__.py  anthropic_backend.py  base.py  bedrock_backend.py  factory.py  openai_backend.py
bakex/openscap/: container_scanner.py  content.py  scanner.py
bakex/plugins/: base_provider.py  loader.py  registry.py  subprocess_provider.py
bakex/static/css/: tailwind.css
bakex/templates/: index.html
bakex/templates/agent/: index.html
bakex/templates/auditor/: compare.html  history.html  index.html  report.html  results.html  scan_image.html
bakex/templates/builder/: run.html  (+1 more)
blueprints/: CONTRIBUTING.md  README.md  index.json
data/: .invicton_key  .statim_key
deploy/aws/: README.md  bakex-builder-role.yaml  bakex-scanner-role.yaml  statim-builder-role.yaml  statim-scanner-role.yaml  stratum-builder-role.yaml  stratum-scanner-role.yaml
deploy/azure/: README.md  bakex-builder-role.json  bakex-scanner-role.json  statim-builder-role.json  statim-scanner-role.json  stratum-builder-role.json  stratum-scanner-role.json
deploy/gcp/: README.md
docs/: README.md  api.md  architecture.md  bakex-blueprints-template.yaml  blueprint-guide.md  cloud-onboarding.md  configuration.md  getting-started.md  pipeline.md  plugin-guide.md  statim-blueprints-template.yaml  stratum-blueprints-repo-readme.md  stratum-blueprints-template.yaml  test_plan.md  user-guide.md  ux-flow-cis-l2-amazon-linux-2023.md
docs/dev/: test_plan.md
invicton/api/: auditor.py
invicton/core/: auditor.py
invicton/openscap/: container_scanner.py  content.py
plugins/catalog/: azure.py  digitalocean.py  gcp.py  index.json  linode.py  proxmox.py
plugins/providers/: README.md  _provider_utils.py  _qemu_utils.py  aws.py  azure.py  digitalocean.py  example_local.py  gcp.py  kvm.py  linode.py  proxmox.py
profiles/examples/: ubuntu22_cis_l1.yaml
profiles/templates/: amazon-linux-2023-cis-l1-aws.yaml  debian12-cis-l1-aws.yaml  generic-hardening-blueprint.yaml  rocky9-cis-l1-aws.yaml  rocky9-cis-l1-azure.yaml  rocky9-cis-l1-digitalocean.yaml  rocky9-cis-l1-gcp.yaml  rocky9-cis-l1-linode.yaml  rocky9-cis-l1-proxmox.yaml  ubuntu22-cis-l1-aws.yaml  ubuntu22-cis-l1-azure.yaml  ubuntu22-cis-l1-digitalocean.yaml  ubuntu22-cis-l1-gcp.yaml  ubuntu22-cis-l1-linode.yaml  ubuntu22-cis-l1-proxmox.yaml
scripts/: refresh_ami_catalog.py  trigger_official_builds.py
statim/: __init__.py  config.py  main.py  paths.py
statim/api/: agent.py  api_keys.py  auditor.py  blueprints.py  builder.py  integrations.py  pipeline.py  plugins.py  registry.py  system.py  ui.py  webhooks.py
statim/core/: agent.py  auditor.py  auth.py  blueprint.py  builder.py  notifications.py  parser.py  playbook_gen.py  registry.py  report.py  sysdeps.py
statim/openscap/: container_scanner.py  content.py  parser.py  scanner.py
statim/plugins/: base_provider.py  loader.py  registry.py  subprocess_provider.py
statim/templates/: base.html
stratum/: __init__.py  config.py  main.py
stratum/api/: agent.py  api_keys.py  auditor.py  blueprints.py  builder.py  integrations.py  pipeline.py  plugins.py  registry.py  ui.py  webhooks.py
stratum/core/: agent.py  api_keys.py  auditor.py  blueprint.py  builder.py  notifications.py  os_catalog.py  parser.py  playbook_gen.py  registry.py  report.py
stratum/openscap/: scanner.py
stratum/plugins/: base_provider.py  loader.py  registry.py  subprocess_provider.py
stratum/templates/: index.html
tests/: __init__.py  conftest.py  test_agent_core.py  test_api_keys.py  test_auditor_core.py  test_blueprint.py  test_cli.py  test_cloud_onboarding_templates.py  test_container_scanning.py  test_core_builder.py  test_credential_store.py  test_error_surfacing.py  test_final_gaps.py  test_gaps.py  test_llm_backends.py  test_llm_backends_extended.py  test_notifications.py  test_openai_backend_toolcalls.py  test_openscap_parser.py  test_packaging_paths.py  test_persistence.py  test_pipeline_logic.py  test_playbook_gen.py  test_plugin_loader.py  test_plugins_extended.py  test_registry.py  test_regression.py  test_remaining_gaps.py  test_report.py  test_sarif.py  test_scanner.py  test_scap_parser.py  test_subprocess_provider.py
tests/api/: conftest.py  test_api_agent_sse.py  test_api_api_keys.py  test_api_auditor.py  test_api_blueprints.py  test_api_blueprints_extended.py  test_api_builder.py  test_api_container_scan.py  test_api_coverage_gaps.py  test_api_integrations.py  test_api_pipeline.py  test_api_plugins.py  test_api_plugins_auditor_pipeline.py  test_api_registry.py  test_api_ui.py  test_api_webhooks.py  test_edge_cases.py
tests/integration/: conftest.py  test_aws_e2e.py
tests/providers/: test_provider_aws.py  test_provider_azure.py  test_provider_contract.py  test_provider_digitalocean.py  test_provider_gcp.py  test_provider_kvm.py  test_provider_linode.py  test_provider_proxmox.py  test_provider_utils.py  test_qemu_utils.py
tests/security/: test_api_key_security.py  test_blueprint_security.py  test_webhook_security.py
tests/ui/: test_pages.py
(+97 files in other folders)
