[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bakex"
version = "0.6.0"
description = "Multi-cloud DevSecOps platform for declarative OS hardening"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Vamshi Krishna Santhapuri" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "pyyaml>=6.0.1",
    "anyio>=4.3.0",
    "httpx>=0.27.0",
    "cryptography>=42.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
# Cloud provider plugins
aws = ["boto3>=1.34"]
gcp = ["google-cloud-compute>=1.14.0", "google-auth>=2.29.0"]
azure = ["azure-mgmt-compute>=30.0.0", "azure-mgmt-network>=25.0.0", "azure-mgmt-resource>=23.0.0", "azure-identity>=1.17.0"]
linode = ["linode-api4>=5.0.0"]
digitalocean = ["requests>=2.31.0"]
proxmox = ["proxmoxer>=2.0.0", "requests>=2.31.0"]
all-providers = ["bakex[aws,gcp,azure,linode,digitalocean,proxmox]"]
# LLM backend extras (anthropic is a core dep; these add alternative backends)
llm-openai = ["openai>=1.30.0"]
llm-bedrock = ["boto3>=1.34"]       # reuses boto3 already pulled in by aws extra
llm-all = ["bakex[llm-openai,llm-bedrock]"]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "pytest-anyio>=0.0.0",
    "anyio[trio]>=4.3.0",
    "ruff>=0.4.0",
    "playwright>=1.44.0",
    "pytest-playwright>=0.5.0",
]

[project.urls]
Repository = "https://github.com/invicton/bakex"
Homepage = "https://github.com/invicton/bakex"
"Bug Tracker" = "https://github.com/invicton/bakex/issues"
Changelog = "https://github.com/invicton/bakex/blob/main/CHANGELOG.md"
Blog = "https://linuxcent.com"
LinkedIn = "https://www.linkedin.com/in/vamshikrishnasanthapuri/"

[project.scripts]
bakex = "bakex.cli:main"

[project.entry-points."bakex.providers"]
# Register pip-installed providers here, e.g.:
# aws = "bakex_aws:AWSProvider"
# proxmox = "bakex_proxmox:ProxmoxProvider"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.3.0",
    "ruff>=0.4.0",
    "playwright>=1.44.0",
    "pytest-playwright>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PLC"]
ignore = ["E501", "B008", "B904", "UP042"]

[tool.ruff.lint.per-file-ignores]
"plugins/**/*.py" = ["PLC0415"]
"scripts/**/*.py" = ["PLC0415"]
"bakex/**/*.py" = ["PLC0415"]
"tests/**/*.py" = ["B017", "PLC0415"]

[tool.hatch.build.targets.wheel]
packages = ["bakex"]

# Read-only data for pip installs: built-in blueprint templates and the
# provider catalog live at the repo root, so they must be mapped into the
# package. Settings falls back to bakex/_bundled/ when the CWD-relative
# dirs are missing (see bakex/config.py).
[tool.hatch.build.targets.wheel.force-include]
"profiles/templates" = "bakex/_bundled/profiles/templates"
"plugins/catalog" = "bakex/_bundled/plugins/catalog"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: live cloud integration tests (require BAKEX_RUN_INTEGRATION=1)",
    "aws_fast: fast AWS checks — STS, AMI resolution, list_images (< 30s each)",
    "aws_smoke: smoke build — EC2 + SSM + CreateImage, no hardening (~10 min)",
    "aws_full: full CIS pipeline — Ansible-Lockdown + OpenSCAP + AMI (~45 min)",
    "ui: browser-based UI smoke tests via Playwright (require BAKEX_RUN_UI=1 and running server at localhost:8001)",
]
